--- a/saque/index.html
+++ b/saque/index.html
@@ -124,7 +124,7 @@
           <div class="card" style="border: 1px solid black; font-size: 18px; padding: 10px;">
             <h3 style="font-size: 15px; margin: 0px;">Fique tranquilo, você receberá esse valor na sua conta após a <b style="color: #9D52F4;">confirmação do seu cadastro</b></h3>
           </div>
-          <button class="btn-pop-out-foto" style="border: 0px;" onclick="window.location.href = 'https://checkout.perfectpay.com.br/pay/PPU38CPHJ48'">CONCLUIR CADASTRO E SACAR</button>
+          <button class="btn-pop-out-foto" style="border: 0px;" onclick="window.location.href = 'https://go.pepper.com.br/3aenm'">CONCLUIR CADASTRO E SACAR</button>
         </div>
       </div>
     </div>
